2007-11-09  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* ps-print.el: Clean the code for checking suitable Emacs version.
	(ps-do-despool): If ps-lpr-switches is not a list, force it to be one.
	(ps-print-version): New version 6.8.1.

2007-11-09  Juanma Barranquero  <lekktu@gmail.com>

	* files.el (enable-local-variables): Doc fix.

2007-11-09  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gud.el (gud-gdb): Remove vestigial gdba doc and code.

2007-11-09  Sven Joachim  <svenjoac@gmx.de>

	* dired-aux.el (dired-copy-file-recursive):
	Preserve directory permissions.

2007-11-09  Juanma Barranquero  <lekktu@gmail.com>

	* whitespace.el (whitespace-write-file-hook): Remove interactive spec.
	(whitespace-unload-function): New-style unload function.  When run,
	unintern `whitespace-unload-hook' and call `unload-feature' recursively
	to stop the old hook from messing with the unloading.

2007-11-09  Juanma Barranquero  <lekktu@gmail.com>

	* emacs-lisp/elp.el (elp-report-limit, elp-restore-all)
	(elp-unset-master, elp-results): Fix typos.
	(elp-sort-by-function, elp-use-standard-output, elp-recycle-buffers-p):
	Doc fixes.

	* msb.el (msb--many-menus): Remove variable.
	(msb-max-menu-items, msb--add-to-menu): Doc fixes.
	(msb-menu-cond, msb-item-handling-function, msb--create-function-info)
	(msb--toggle-menu-type): Fix typos in docstrings.

	* shadowfile.el (shadow-inhibit-overload, shadow-remove-from-todo)
	(shadow-insert-var): Doc fixes.
	(shadow-file-match, shadow-define-cluster, shadow-define-regexp-group):
	Reflow docstrings.
	(shadow-parse-fullname, shadow-read-files): Fix typos in docstrings.

2007-11-09  Juanma Barranquero  <lekktu@gmail.com>

	* ediff-hook.el (ediff, ediff-files, ediff-buffers, ebuffers, ediff3)
	(ediff-files3, ediff-buffers3, ebuffers3, erevision, ediff-revision):
	Fix typos in autoload docstrings.

2007-11-09  Richard Stallman  <rms@gnu.org>

	* savehist.el (savehist-save): Obey savehist-ignored-variables.
